# proxy/main.go
@@ -2,13 +2,22 @@ package main
 
 import (
 	"github.com/go-chi/chi"
+	"github.com/go-chi/jwtauth"
 	httpSwagger "github.com/swaggo/http-swagger/v2"
+	"main/proxy/auth"
 	_ "main/proxy/docs" // docs is generated by Swag CLI, you have to import it.
-	"main/proxy/geolocation"
 	"net/http"
 	"net/http/httputil"
 	"net/url"
 )
+
+type User struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+var users = make(map[string]string)
+var tokenAuth *jwtauth.JWTAuth
 
 //	@title			Dadata API Proxy
 //	@version		1.0
@@ -17,6 +26,7 @@ import (
 // @host	localhost:8080/
 // @BasePath	/api/address
 func main() {
+	tokenAuth = jwtauth.New("HS256", []byte("secret"), nil)
 	hugoURL, err := url.Parse("http://hugo:1313")
 	if err != nil {
 		panic(err)
@@ -25,16 +35,10 @@ func main() {
 
 	r := chi.NewRouter()
 	r.Group(func(r chi.Router) {
-
 		r.Get("/swagger/*", httpSwagger.Handler(
 			httpSwagger.URL("http://localhost:8080/swagger/doc.json"), //The url pointing to API definition
 		))
-		r.Post("/api/address/search", func(w http.ResponseWriter, r *http.Request) {
-			geolocation.Search(w, r)
-		})
-		r.Post("/api/address/geocode", func(w http.ResponseWriter, r *http.Request) {
-			geolocation.Geocode(w, r)
-		})
+
 		r.Get("/api/", func(w http.ResponseWriter, r *http.Request) {
 			w.Write([]byte("Hello from API"))
 		})
@@ -42,6 +46,9 @@ func main() {
 			hugoProxy.ServeHTTP(w, r)
 		})
 	})
+	auth.Register(r, tokenAuth, users)
+	auth.Login(r, tokenAuth, users)
+	auth.ProtectedRoutes(r, tokenAuth)
 	http.ListenAndServe(":8080", r)
 }
 
@@ -66,3 +73,7 @@ func (rp *ReverseProxy) ReverseProxy(next http.Handler) http.Handler {
 func (rp *ReverseProxy) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	http.Redirect(w, r, "http://"+rp.host+":"+rp.port+r.RequestURI, http.StatusFound)
 }
+
+// @contact.name	API Support
+// @contact.url	https://github.com/go-chi/chi/issues
+// @contact.email	6z6o8@example.com
